# pandoc-course-template

./: CLAUDE.md  Makefile  README.md  _config.toml  pyproject.toml  references.bib  test-beamer-bg.tex
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  pr-build.yml
assessments/: 01-example-assessment.md
css/: reveal_dark.scss
filters/: beamer-background.lua
lectures/: 01-example-lecture.md
resources/: 01-example-resource.md
workshops/: 01-example-workshop.md
